<resources>
    <string name="app_name">Loggin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_fragment">Inicio de Sesion</string>
    <string name="title_user">Usuario: </string>
    <string name="title_pwd">Contraseña: </string>
    <string name="title_boton">Iniciar Sesion</string>
    <string name="title_botton">Registrar</string>
    <string name="title_name">Registrar</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>